@@ -4,13 +4,12 @@
 	JHtml::_('behavior.tooltip');
 ?>
 <form action="<?php echo JRoute::_('index.php') ?>" method="post" name="adminForm">
-<div class="width-50">
+<div class="width-50 fltlft">
 	<fieldset class="adminform">
 		<legend><?php echo JText::_('Styles'); ?></legend>
-
 		<table class="admintable">
 		<tr>
-			<th width="120"><?php echo JText::_('Style'); ?></th>
+			<th width="180"><?php echo JText::_('Style'); ?></th>
 			<th width="70"><?php echo JText::_('Default'); ?></th>
 			<th width="70"><?php echo JText::_('Delete'); ?></th>
 		</tr>
@@ -21,7 +20,7 @@
 		<tr>
 			<td><a href="<?php echo JRoute::_('index.php?option=com_templates&task=edit&template='.$this->template.'&id='.$set->id.'&client='.$this->client->id); ?>">
 				<?php echo JText::_($this->template); ?> (<?php echo $set->description; ?>)
-			</a></td>
+				</a></td>
 			<td><?php
 			if($set->home)
 			{
@@ -30,8 +29,6 @@
 				echo '<a href="'.JRoute::_('index.php?option=com_templates&task=setdefault&id='.$set->id).'">default</a>';
 			} ?></td>
 			<td><a href="<?php echo JRoute::_('index.php?option=com_templates&task=delete&template='.$this->template.'&id='.$set->id); ?>">
-			
-			
 				<?php echo '<img src="templates/'.$this->template.'/images/menu/icon-16-delete.png"  alt="'.JText::_('Delete').'" />' ; ?> 
 				</a>
 			</td>
@@ -42,37 +39,20 @@
 
 </div>
 
-<div class="width-50">
+<div class="width-50 fltrt">
 	<fieldset class="adminform">
 		<legend><?php echo JText::_('Details'); ?></legend>
-
-		<table class="admintable">
-		<tr>
-			<td valign="top" class="key">
-				<?php echo JText::_('Name'); ?>:
-			</td>
-			<td>
-				<strong>
-					<?php echo JText::_($this->template); ?> - <input class="inputbox" type="text" name="description" id="description" size="40" maxlength="255" value="<?php echo $this->params->description; ?>" />
-
-				</strong>
-			</td>
-		</tr>
-		<tr>
-			<td valign="top" class="key">
-				<?php echo JText::_('Description'); ?>:
-			</td>
-			<td>
-				<?php echo JText::_($this->data->description); ?>
-			</td>
-		</tr>
-		</table>
+		<label><?php echo JText::_('Name'); ?>:</label>
+		<?php echo JText::_($this->template); ?> - <input class="inputbox" type="text" name="description" id="description" size="40" maxlength="255" value="<?php echo $this->params->description; ?>" />
+		<div class="clr"></div>
+		<label><?php echo JText::_('Description'); ?>:</label>
+		<?php echo JText::_($this->data->description); ?>
 	</fieldset>
+</div>
+<div class="clr"></div>
+<div class="width-50 fltlft">
 	<fieldset class="adminform">
 		<legend><?php echo JText::_('Parameters'); ?></legend>
-		<table class="admintable">
-		<tr>
-			<td>
 			<?php
 			if (!is_null($this->params->params)) {
 				echo $this->params->params->render();
@@ -80,9 +60,6 @@
 				echo '<div class="noparams-notice">' . JText :: _('No Parameters') . '</div>';
 			}
 			?>
-			</td>
-		</tr>
-		</table>
 	</fieldset>
 </div>
 <div class="clr"></div>
