@@ -218,11 +218,24 @@ span.note {
 	color: #666;
 }
 
-.previewFrame {
+.previewframe {
 	border: none;
-	width: 95%;
+	width: 98%;
 	height: 600px;
 	padding: 0px 5px 0px 10px;
+}
+
+textarea#codeedit {
+	width: 100%;
+	height: 500px;
+}
+
+.temprev {
+	width: 100%;
+	border: 1px solid #d7d7d7;
+	margin:0;
+	padding: 0;
+	background: #fff;
 }
 
 /* -- OVERLIB STYLES ----------------------------- */
@@ -335,7 +348,7 @@ h3.jpane-toggler a:hover {
 }
 
 .jpane-slider .paramrow {
-	margin: 15px;
+	/* margin: 15px; */
 }
 
 div.paramrow label:first-child {
@@ -497,11 +510,10 @@ fieldset ul.checklist {
 	margin-left: 27px;
 }
 
-/* Temporary fix until User Groups lists remove inputboxes from within labels */
-fieldset ul.checklist input {
-	float:none;
+fieldset ul.checklist input,
+fieldset ul.checklist label {
+	float:none; 
 }
-
 
 
 
@@ -591,7 +603,10 @@ input#jform_menutype,
 input#jform_menudescription,
 label#userparamsnew_usertype-lbl,
 label#userparamsuseractivation-lbl,
-label#userparamsfrontend_userparams-lbl {
+label#userparamsfrontend_userparams-lbl,
+label#paramsshowSiteName-lbl,
+label#paramstextBig-lbl,
+label#paramshighContrast-lbl {
 	clear:left;
 }
 
@@ -805,6 +820,10 @@ div#element-box div.m div.jpane-slider form table.adminlist a { font-size: 1em;}
 
 .container {clear:both; text-decoration:none;}
 * html .container {display:inline-block;}
+
+
+
+
 
 /* -- GLOBAL CONFIG STYLES ----------------------------- */
 
@@ -1430,3 +1449,62 @@ td {
 	padding:3px;
 }
 */
+
+/* -- ACL STYLES relocated from com_users/media/default.css ----------- */
+/* General */
+.scroll {overflow:auto;}
+
+/* Form validation */
+.invalid{color:red;font-weight:700}
+input.invalid{border:1px solid red}
+
+/* Filter Form */
+fieldset ol,ol#property-values{margin:0;padding:0}
+fieldset li,ol#property-values li{list-style:none;margin:0;padding:5px}
+fieldset.filter{border:0;margin:0;padding:0 0 5px}
+fieldset.filter ol{border:0;list-style:none;margin:0;padding:5px 0 0}
+fieldset.filter ol li{float:left;padding:0 5px 0 0}
+fieldset.filter ol li fieldset{border:0;margin:0;padding:0}
+fieldset.filter .left{float:left}
+fieldset.filter .right{float:right}
+fieldset#buttonbar{border:0;text-align:right}
+fieldset#buttonbar ul{list-style:none;margin:0;padding:0}
+fieldset#buttonbar li{margin:0;padding:5px}
+
+/* Configuration Modal */
+div#config #submenu{list-style-image:none;list-style-position:outside;list-style-type:none;margin:0;padding:0}
+div#config #submenu-box div.t{background:transparent url(../images/j_border.png) 0 0 repeat-x}
+div#config div.t,div#config div.b{height:6px;margin:0;overflow:hidden;padding:0}
+div#config #submenu-box div.t div.t{background:transparent url(../images/j_crn_tr_dark.png) no-repeat scroll 100% 0}
+div#config #submenu-box div.t div.t div.t{background:transparent url(../images/j_crn_tl_dark.png) no-repeat scroll 0}
+div#config div.m{border-left:1px solid #CCC;border-right:1px solid #CCC;padding:0 8px}
+div#config #submenu-box div.b{background:transparent url(../images/j_border.png) repeat-x scroll 0 100%}
+div#config #submenu-box div.b div.b{background:transparent url(../images/j_crn_br_dark.png) no-repeat scroll 100% 0}
+div#config #submenu-box div.b div.b div.b{background:transparent url(../images/j_crn_bl_dark.png) no-repeat scroll 0}
+div#config #submenu li{float:left;margin:0;padding:0}
+div#config #submenu li a,div#config #submenu span.nolink{border-right:1px solid #CCC;color:#0B55C4;cursor:pointer;font-weight:700;height:12px;line-height:12px;padding:0 15px}
+div#config #submenu li:last-child a{border-right:none}
+div#config #submenu a.active,div#config #submenu span.nolink.active{color:#000;text-decoration:underline}
+div#config #submenu-box{background:#F6F6F6 none repeat scroll 0;margin-bottom:10px}
+div#config #submenu-box .padding{padding:0}
+
+/* Properties */
+fieldset ol,ol#property-values{margin:0;padding:0}
+fieldset li,ol#property-values li{list-style:none;margin:0;padding:5px}
+
+
+
+
+/* -- ACL STYLES relocated from com_users/media/grid.css ----------- */
+* :focus,a:active{outline:none}
+a.move_up{background-image:url(../images/uparrow.png);display:inline-block;height:16px;text-indent:-1000em;width:16px}
+span.move_up{background-image:url../images/uparrow0.png);display:inline-block;height:16px;width:16px}
+a.move_down{background-image:url(../images/downarrow.png);display:inline-block;height:16px;text-indent:-1000em;width:16px}
+span.move_down{background-image:url(../images/downarrow0.png);display:inline-block;height:16px;width:16px}
+a.grid_false{background-image:url(../images/publish_x.png);display:inline-block;height:16px;text-indent:-1000em;width:16px}
+a.grid_true{background-image:url(../images/tick.png);display:inline-block;height:16px;text-indent:-1000em;width:16px}
+a.grid_trash{background-image:url(../images/icon-16-trash.png);display:inline-block;height:16px;text-indent:-1000em;width:16px}
+
+
+
+
